qlcplus (4.12.8) stable; urgency=low

  * engine: fix Chaser random startup (thanks to Dennis Suermann)
  * Plugins/ArtNet: add default standard transmission mode as per protocol specifications
  * Plugins/DMX USB: add support for DMXKing MAX products
  * New fixture: Ibiza Mini Moving Star Wash (thanks to Chris Shucksmith)
  * New fixtures: FOS Technologies IQ Par, IQ 28x12 Wash, Iridium 75W Spot (thanks to Maurizio Aru)

 -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 17 Dec 2023 12:13:14 +0200

qlcplus (4.12.7) stable; urgency=low

  * engine: improve audio fade in/out
  * engine: consider EFX fade in
  * engine: handle LTP channels fade out
  * engine: make sure input/output device names are unique
  * engine: fix crash when no IO plugin is found
  * engine: fix blackout to leave LTP channels untouched
  * engine: add volume control to audio function
  * UI/Monitor: fix 2D view multiple heads not showing correctly
  * UI/Audio Editor: do not stop audio function if not previewing
  * UI/Fixture Remap: add button to import fixture lists (.qxfl)
  * UI/Fixture Remap: fix wrong widgets remapping
  * UI/Wizard: improved generated function names (thanks to netmindz)
  * UI: remember state of Function selection dialog
  * Plugins/OSC: fix broadcast packets reception (thanks to Jannis Achstetter)
  * Plugins/E1.31: allow to set 2 digits of the IP address
  * Plugins/MIDI: fix consecutive notes not notified on macOS (thanks to Nils Tijtgat)
  * Virtual Console/Audio Triggers: stop sending DMX values on deactivation
  * Virtual Console/Animation: include all available presets
  * Virtual Console: submaster now affects widgets on all pages but only on active frames
  * Web Access: add support for widget background images
  * Web Access: improve button layout and text overflow (thanks to pomowunk)
  * Application: fix qxf file association on Windows (if installed as admin)
  * RGB scripts: added 'Marquee' script (thanks to Branson Matheson)