@@ -18,10 +18,11 @@
 */
 
 #include <QTreeWidgetItem>
+#include <QMessageBox>
+#include <QSettings>
 #include <QCheckBox>
 #include <QComboBox>
 #include <QLineEdit>
-#include <QMessageBox>
 #include <QSpinBox>
 #include <QLabel>
 #include <QString>
@@ -61,6 +62,11 @@ ConfigureE131::ConfigureE131(E131Plugin* plugin, QWidget* parent)
     setupUi(this);
 
     fillMappingTree();
+
+    QSettings settings;
+    QVariant value = settings.value(SETTINGS_IFACE_WAIT_TIME);
+    if (value.isValid() == true)
+        m_waitReadySpin->setValue(value.toInt());
 }
 
 ConfigureE131::~ConfigureE131()
@@ -409,6 +415,13 @@ void ConfigureE131::accept()
             }
         }
     }
+
+    QSettings settings;
+    int waitTime = m_waitReadySpin->value();
+    if (waitTime == 0)
+        settings.remove(SETTINGS_IFACE_WAIT_TIME);
+    else
+        settings.setValue(SETTINGS_IFACE_WAIT_TIME, waitTime);
 
     QDialog::accept();
 }
