@@ -17,19 +17,16 @@
   limitations under the License.
 */
 
-#include "artnetplugin.h"
-#include "configureartnet.h"
-
+#include <QSettings>
 #include <QDebug>
 
-#define MAX_INIT_RETRY  10
-
+#include "artnetplugin.h"
+#include "configureartnet.h"
 
 bool addressCompare(const ArtNetIO &v1, const ArtNetIO &v2)
 {
     return v1.address.ip().toString() < v2.address.ip().toString();
 }
-
 
 ArtNetPlugin::~ArtNetPlugin()
 {
@@ -37,6 +34,13 @@ ArtNetPlugin::~ArtNetPlugin()
 
 void ArtNetPlugin::init()
 {
+    QSettings settings;
+    QVariant value = settings.value(SETTINGS_IFACE_WAIT_TIME);
+    if (value.isValid() == true)
+        m_ifaceWaitTime = value.toInt();
+    else
+        m_ifaceWaitTime = 0;
+
     foreach(QNetworkInterface iface, QNetworkInterface::allInterfaces())
     {
         foreach (QNetworkAddressEntry entry, iface.addressEntries())
@@ -96,16 +100,19 @@ QString ArtNetPlugin::pluginInfo()
     return str;
 }
 
-bool ArtNetPlugin::requestLine(quint32 line, int retries)
+bool ArtNetPlugin::requestLine(quint32 line)
 {
     int retryCount = 0;
 
     while (line >= (quint32)m_IOmapping.length())
     {
         qDebug() << "[ArtNet] cannot open line" << line << "(available:" << m_IOmapping.length() << ")";
-        Sleep(1000);
-        init();
-        if (retryCount++ == retries)
+        if (m_ifaceWaitTime)
+        {
+            Sleep(1000);
+            init();
+        }
+        if (retryCount++ >= m_ifaceWaitTime)
             return false;
     }
 
@@ -167,7 +174,7 @@ QString ArtNetPlugin::outputInfo(quint32 output)
 
 bool ArtNetPlugin::openOutput(quint32 output, quint32 universe)
 {
-    if (requestLine(output, MAX_INIT_RETRY) == false)
+    if (requestLine(output) == false)
         return false;
 
     qDebug() << "[ArtNet] Open output on address :" << m_IOmapping.at(output).address.ip().toString();
@@ -237,7 +244,7 @@ QStringList ArtNetPlugin::inputs()
 
 bool ArtNetPlugin::openInput(quint32 input, quint32 universe)
 {
-    if (requestLine(input, MAX_INIT_RETRY) == false)
+    if (requestLine(input) == false)
         return false;
 
     // if the controller doesn't exist, create it.
