@@ -17,13 +17,11 @@
   limitations under the License.
 */
 
-#include "oscplugin.h"
-#include "configureosc.h"
-
 #include <QSettings>
 #include <QDebug>
 
-#define MAX_INIT_RETRY  10
+#include "oscplugin.h"
+#include "configureosc.h"
 
 bool addressCompare(const OSCIO &v1, const OSCIO &v2)
 {
@@ -36,6 +34,13 @@ OSCPlugin::~OSCPlugin()
 
 void OSCPlugin::init()
 {
+    QSettings settings;
+    QVariant value = settings.value(SETTINGS_IFACE_WAIT_TIME);
+    if (value.isValid() == true)
+        m_ifaceWaitTime = value.toInt();
+    else
+        m_ifaceWaitTime = 0;
+
     foreach(QNetworkInterface iface, QNetworkInterface::allInterfaces())
     {
         foreach (QNetworkAddressEntry entry, iface.addressEntries())
@@ -94,16 +99,19 @@ QString OSCPlugin::pluginInfo()
     return str;
 }
 
-bool OSCPlugin::requestLine(quint32 line, int retries)
+bool OSCPlugin::requestLine(quint32 line)
 {
     int retryCount = 0;
 
     while (line >= (quint32)m_IOmapping.length())
     {
         qDebug() << "[OSC] cannot open line" << line << "(available:" << m_IOmapping.length() << ")";
-        Sleep(1000);
-        init();
-        if (retryCount++ == retries)
+        if (m_ifaceWaitTime)
+        {
+            Sleep(1000);
+            init();
+        }
+        if (retryCount++ >= m_ifaceWaitTime)
             return false;
     }
 
@@ -153,7 +161,7 @@ QString OSCPlugin::outputInfo(quint32 output)
 
 bool OSCPlugin::openOutput(quint32 output, quint32 universe)
 {
-    if (requestLine(output, MAX_INIT_RETRY) == false)
+    if (requestLine(output) == false)
         return false;
 
     qDebug() << "[OSC] Open output with address :" << m_IOmapping.at(output).IPAddress;
@@ -219,7 +227,7 @@ QStringList OSCPlugin::inputs()
 
 bool OSCPlugin::openInput(quint32 input, quint32 universe)
 {
-    if (requestLine(input, MAX_INIT_RETRY) == false)
+    if (requestLine(input) == false)
         return false;
 
     qDebug() << "[OSC] Open input on address :" << m_IOmapping.at(input).IPAddress;
