@@ -42,6 +42,7 @@ typedef struct _oio
 #define OSC_OUTPUTIP "outputIP"
 #define OSC_OUTPUTPORT "outputPort"
 
+#define SETTINGS_IFACE_WAIT_TIME "OSCPlugin/ifacewait"
 
 class OSCPlugin : public QLCIOPlugin
 {
@@ -69,7 +70,7 @@ public:
     QString pluginInfo();
 
 private:
-    bool requestLine(quint32 line, int retries);
+    bool requestLine(quint32 line);
 
     /*********************************************************************
      * Outputs
@@ -128,6 +129,9 @@ public:
 private:
     /** Map of the OSC plugin Input/Output lines */
     QList<OSCIO>m_IOmapping;
+
+    /** Time to wait (in seconds) for interfaces to be ready */
+    int m_ifaceWaitTime;
 };
 
 #endif
